# django-sendgrid-v5

./: .gitignore  .mypy.ini  .travis.yml  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  dev-requirements.py  dev-requirements.txt  nose.cfg  publish.sh  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: stale.yml
.github/workflows/: pipeline.yml
sendgrid_backend/: __init__.py  decorators.py  mail.py  signals.py  util.py  version.py
test/: __init__.py  test_backend_init.py  test_decorators.py  test_echo_to_stream.py  test_mail.py  test_post_to_sendgrid.py  test_sandbox_mode.py
