[tool.black]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poetry]
name = "django-sendgrid-v5"
version = "1.2.2"
description = "An implementation of Django's EmailBackend compatible with sendgrid-python v5+"
authors = ["Steven Sklar <sklarsa@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.group.dev.dependencies]
black = "22.3.0"
coverage = "6.2"
flake8 = "3.8.4"
importlib-metadata = "3.6.0"
isort = "5.7.0"
jedi = "0.10.2"
mock = "2.0.0"
mypy = "0.920"
pytest = "6.2.5"
pytest-cov = "3.0.0"
tox = "3.8.5"
twine = "3.3.0"
wheel = "^0.41.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
