[project]
name = "django-sendgrid-v5"
dynamic = ["version"]
description = "An implementation of Django's EmailBackend compatible with sendgrid-python v5+"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Steven Sklar", email = "sklarsa@gmail.com" },
]
keywords = [
    "backend",
    "django",
    "email",
    "sendgrid",
]
classifiers = [
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "django >=1.8",
    "python-http-client >=3.0.0",
    "sendgrid >=5.0.0",
]

[project.urls]
Homepage = "https://github.com/sklarsa/django-sendgrid-v5"
Changelog = "https://github.com/sklarsa/django-sendgrid-v5/releases"
Bug = "https://github.com/sklarsa/django-sendgrid-v5/issues"

[tool.black]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.setuptools.dynamic]
version = {attr = "sendgrid_backend.version.__version__"}

[tool.setuptools.packages.find]
exclude = ["test*"]

[tool.tox]
legacy_tox_ini = """
    [tox]
    # https://docs.djangoproject.com/en/5.1/faq/install/#what-python-version-can-i-use-with-django
    env_list =
        django{18,110,111,21,22,3,31}-py{37,38,39}-sendgrid{5,6}
        django{32}-py{37,38,39,310,311,312}-sendgrid{5,6}
        django{4,41,42}-py{38,39,310,311,312}-sendgrid{5,6}
        django{5}-py{310,311,312}-sendgrid{5,6}
        django{51}-py{310,311,312,313}-sendgrid{5,6}

    [gh]
    python =
        3.7: py37
        3.8: py38
        3.9: py39
        3.10: py310
        3.11: py311
        3.12: py312
        3.13: py313

    [testenv]
    deps =
        django18: Django>=1.8,<1.9
        django110: Django>=1.10,<1.11
        django111: Django>=1.11,<2
        django21: Django>=2.1,<2.2
        django22: Django>=2.2,<2.3
        django3: Django>=3.0,<3.1
        django31: Django>=3.1,<3.2
        django32: Django>=3.2,<4
        django4: Django>=4.0,<4.1
        django41: Django>=4.1,<4.2
        django5: Django>=5.0,<5.1
        django51: Django>=5.1,<5.2
        sendgrid5: sendgrid>=5,<6
        sendgrid6: sendgrid>=6,<7
        pytest-cov

    commands =
        pytest ./test --cov=sendgrid_backend
    pass_env =
        SENDGRID_API_KEY
        TESTING_SENDGRID_EU_API_KEY
"""